# spec_coding

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.claude/rules/: api_pydantic_style.md  domain_naming_convention.md  ecc_security.md  ecc_testing.md  fastapi_shield.md  frontend_architect.md  global_guard.md  implementation_loop.md  spec_manager.md  spec_trigger.md
.cursor/: mcp.json
.cursor/rules/: ecc_security.mdc  ecc_testing.mdc  fastapi_shield.mdc  frontend_architect.mdc  global_guard.mdc  spec_manager.mdc  spec_trigger.md  spec_trigger.mdc
backend/: pyproject.toml  requirements.txt  requirements_dev.txt
backend/app/: main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  deps.py  response.py
data/: init_db.sql
docs/: INSTALL_REPORT.md  cursor_skills_and_mcp.md  editor_compatibility.md  installed_capabilities.md  toolchain.md
docs/harnesses/: archive_feature_list.json  archive_progress.txt  claude-progress.txt  dev_services_feature_list.json  feature_list.json  init.sh  mcp_setup.md  scope.md  verify_harnesses.sh
docs/plan_auto/: init.sh  mcp_setup.md  verify_plan_auto.sh
docs/spec/: README.md
docs/spec_process/: CHECKLISTS.md  (+8 more)
frontend/: package.json  tailwind.config.ts  tsconfig.json
scripts/: archive.sh  install_mcp_mac_linux.sh  install_skills_mac_linux.sh
spec_cli/: README.md  pyproject.toml  setup.py
spec_cli/spec_cli/: __init__.py  __main__.py  build_templates.py  cli.py
spec_cli/spec_coding.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+39 files in other folders)
